# util

./: .editorconfig  .gitignore  BASH_FORMATTING.md  CLAUDE.md  PYTHON_FORMATTING.md  README.md
secconfig/: README.md  pyproject.toml
secconfig/examples/: SECCONFIG_DIR.sops.yaml.example  create-example-encrypted.sh  example-config.yaml
secconfig/scripts/: .work-encrypted-config.bash  decrypt-config.sh  edit-encrypted-config.sh  encrypt-config.sh  new-encrypted-config.sh
secconfig/secconfig/: __init__.py  loader.py
secconfig/tests/: test_config.py  test_decryption.py
tokmint/: DESIGN.md  README.md  pyproject.toml
tokmint/examples/: curl.example.api_key.sh  curl.example.client_secret_post.sh  curl.example.jwk_private_key.sh  curl.example.jwk_private_key_dpop.sh  dot.sops.yaml-tokmint_example.yaml  mint-token-curl.example.client_id_secret.sh  mint-token-curl.example.env_vars.sh  mint-token-curl.example.static_token.sh  postman-prerequest.example-general.js  postman-prerequest.example-okta.js  postman-prerequest.example-sailpoint.js  postman-prerequest.example.general.js  postman-prerequest.example.js  postman-prerequest.example.okta.js  postman-prerequest.example.sailpoint.js  postman-prerequest.sailpoint-with-tokmint.example.js  profile.auth-servers.example.yaml  profile.reference.yaml  sops.example.dot-sops.yaml  test-sailpoint.sh  tokmint.example.profile.yaml
tokmint/tests/: conftest.py  test_mode_b.py  test_oauth_common.py  test_phase1.py  test_profile_schema.py  test_unsafe_logging_settings.py
tokmint/tokmint/: __init__.py  __main__.py  app.py  canonical.py  dpop.py  errors.py  jsonl_fmt.py  jwt_sign.py  logging_config.py  oauth_common.py  (+7 more)
(+38 files in other folders)
