[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tokmint"
version = "0.1.0"
description = "Local HTTP service to mint API tokens for Postman (static or OAuth client_credentials)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "cryptography>=41.0.0",
    "fastapi>=0.100.0",
    "httpx>=0.24.0",
    "PyJWT>=2.8.0",
    "uvicorn[standard]>=0.22.0",
]

[project.optional-dependencies]
dev = [
    "jsonschema>=4.0.0",
    "pytest>=7.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
tokmint = "tokmint.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tokmint*"]

[tool.setuptools.package-data]
tokmint = ["schemas/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 80
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
